# happy-simulator

./: .clocignore  .gitignore  CLAUDE.md  COMPONENTLIB.md  DEV.md  README.md  TODO.md  mkdocs.yml  pyproject.toml  setup.py
.claude/: settings.local.json
.dev/: aaa.md  ai-integration-layer-design.md  claude-automation-recommendations.md  claudemd_enhancement_plan.md  code-stepping-design.md  code-stepping-plan.md  codebase-review.md  cold-start-example-design.md  comparisons-to-simpy.md  consistent-hashing-example-design.md  coordinated-parallel-simulation-design.md  debug_gc.py  des-improvements.md  draggable-dashboards-design.md  entity-state-history-design.md  ergonomic-api-improvements-v2.md  ergonomic-api-improvements.md  event-dispatch-simplification.md  feature-gap-analysis.md  further-components.md  gc-caused-collapse-design.md  improve-codebase.md  inductor-design.md  inductor-visual-example-design.md  industrial-components-design.md  industrial-components-wave2-design.md  logging-design.md  observability-design.md  paper-plan.md  parallel-simulation-design.md  performance-optimization-design.md  performance-testing-design.md  ratelimiter-analysis.md  reimplementation-efficiency-analysis.md  scipy-removal-plan.md  simulation-as-specification-design.md  simulation-control-design.md  sketching-algorithms-design.md  stepping-and-rewind-design.md  user-skills-design.md  (+4 more)
.github/: copilot-instructions.md
archive/: arrival_distribution.py  client.py  client_server_request_event.py  client_timeout.py  congestive_collapse.py  constant_latency.py  constant_profile.py  data.py  datasink.py  exponential_latency.py  generate_event.py  lifo_queue.py  lifo_vs_fifo.py  load_shed_basic.py  measurement.py  measurement_event.py  normal_latency.py  poisson_arrival_time_effects.py  queue.py  queue_event.py  queued_server.py  queued_server_example.py  rampup_profile.py  rate_limit_simple.py  rate_limiter.py  server.py  simulation_result.py  simulation_start_event  spike_profile.py  test_arrival_distribution.py  test_basic_sink.py  test_constant_profile.py  test_data.py  test_event_heap.py  test_exponential_latency.py  test_normal_latency.py  test_queued_entity.py  test_queueing_server.py  test_rampup_profile.py  test_rate_limiter.py  (+2 more)
docs/: api.md  getting-started.md  index.md  installation.md
examples/: adverse_advertising_amplification.py  ai_analysis.py  airport_terminal.py  auto_scaler.py  basic_client_server.py  blood_bank.py  chain_replication.py  client_timeout.py  coffee_shop.py  cold_start.py  congestive_collapse.py  cpu_scheduling.py  crdt_convergence.py  disk_io_contention.py  dual_path_queue_latency.py  event_log.py  gc_caused_collapse.py  grocery_store.py  hospital_er.py  inductor_burst_suppression.py  job_scheduler_dag.py  laundromat.py  lifo_vs_fifo.py  load_shed_basic.py  m_m_1_queue.py  manufacturing_line.py  metastable_state.py  metric_collection_pipeline.py  outbox_relay_lag.py  page_cache_eviction.py  paxos_consensus.py  pharmacy.py  poisson_arrival_time_effects.py  queued_server_example.py  raft_leader_election.py  rate_limit_simple.py  restaurant.py  rolling_deployment.py  saga_failure_cascade.py  (+11 more)
(+937 files in other folders)
