[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "happysim"
version = "0.2.0"
description = "Discrete event simulation library for Python, similar to MATLAB SimEvent"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [
    { name = "adamfilli" }
]
keywords = [
    "simulation",
    "discrete-event",
    "event-driven",
    "modeling",
    "simevents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
visual = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy",
    "ruff",
    "mkdocs-material",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/adamfilli/happy-simulator"
Repository = "https://github.com/adamfilli/happy-simulator"
Issues = "https://github.com/adamfilli/happy-simulator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["happysimulator*"]

[tool.setuptools.package-data]
happysimulator = ["py.typed", "visual/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
    "C4",     # flake8-comprehensions
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
    "PIE",    # flake8-pie (misc. lints)
    "T20",    # flake8-print (flag print statements in library code)
    "RET",    # flake8-return
    "TCH",    # flake8-type-checking (move imports behind TYPE_CHECKING)
    "PGH",    # pygrep-hooks
    "PERF",   # Perflint (performance anti-patterns)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RET504", # unnecessary assignment before return
    "SIM108", # use ternary instead of if-else (readability preference)
    "N806",   # variable in function should be lowercase (conflicts with math conventions)
    "UP007",  # use X | Y for union types (keep Optional for readability in some cases)
]

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["T20"]   # allow print() in examples
"tests/**" = ["T20"]      # allow print() in tests

[tool.ruff.lint.isort]
known-first-party = ["happysimulator"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
